--- a/SwaggerMock/SwaggerMock.csproj
+++ b/SwaggerMock/SwaggerMock.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.0.1</Version>
+    <Authors>Declan Cook</Authors>
+    <Company />
+    <Description>Create a mock server from a swagger document that validates all requests</Description>
+    <RepositoryUrl>https://github.com/Decad/SwaggerMock</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
