--- a/src/SwaggerMock/SwaggerMock.csproj
+++ b/src/SwaggerMock/SwaggerMock.csproj
@@ -2,12 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Version>0.0.1</Version>
     <Authors>Declan Cook</Authors>
     <Company />
     <Description>Create a mock server from a swagger document that validates all requests</Description>
     <RepositoryUrl>https://github.com/Decad/SwaggerMock</RepositoryUrl>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <CodeAnalysisRuleSet>..\..\style.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,5 +20,5 @@
     <PackageReference Include="NSwag.Core" Version="11.12.9" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta004" />
   </ItemGroup>
-
+  
 </Project>
