--- a/test/SwaggerMock.Tests/SwaggerMock.Tests.csproj
+++ b/test/SwaggerMock.Tests/SwaggerMock.Tests.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
+    <CodeAnalysisRuleSet>..\..\style.tests.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SwaggerMock\SwaggerMock.csproj" />
+    <ProjectReference Include="..\..\src\SwaggerMock\SwaggerMock.csproj" />
   </ItemGroup>
 
   <ItemGroup>
