--- a/src/SwaggerMock/SwaggerMock.csproj
+++ b/src/SwaggerMock/SwaggerMock.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Version>0.0.1</Version>
+    <VersionPrefix>0.0.1</VersionPrefix>
     <Authors>Declan Cook</Authors>
     <Company />
     <Description>Create a mock server from a swagger document that validates all requests</Description>
